--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<p>WordFind.js by BunKat</p>
+<p>TAD</p>
 <div id='puzzle'></div>
 <div id='words'></div>
 <div><button id='solve'>Solve Puzzle</button></div>
