--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Word Find</title>
+  <title>Caça Palavras</title>
+   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
+  
 </head>
 <body>
 
-<p>TAD</p>
+
+
+<center>
+<h1>GINCANA TAD - 8 Anos!</h1>
+</center>
+
+
 <div id='puzzle'></div>
 <div id='words'></div>
-
 
 <script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> 
 <script type="text/javascript" src="src/wordfind.js"></script> 
 <script type="text/javascript" src="scripts/wordfindgame.js"></script> 
 <script>
 
-  var words = ['cows', 'tracks', 'arrived', 'located', 'sir', 'seat',
-               'division', 'effect', 'underline', 'view', 'annual',
-               'anniversary', 'centennial', 'millennium', 'perennial',
-               'artisan', 'apprentice', 'meteorologist', 'blizzard', 'tornado',
-               'intensify','speed','count','consonant','someone',
-               'sail','rolled','bear','wonder','smiled','angle', 'absent',
-               'decadent', 'excellent', 'frequent', 'impatient', 'cell',
-               'cytoplasm', 'organelle', 'diffusion', 'osmosis',
-               'respiration'];
+  var words = ['GINCANA', 'AFTER', 'DARK', 'MOONBOUND', 'PSY', 'LARISSA',
+               'FALLEN', 'TIJAN', 'LEITURA', 'CREST', 'ESPECIAL',
+               'ANIVERSARIO', 'FAERIE', 'QUOTES', 'HIGH',
+               'MEMBROS', 'SORTEIO', 'BONUS', 'TEMPO', 'TRADUTOR',
+               'ARCANA','CHANGELING','HARMONY','AVALON','DEMONICA',
+               'DELIVERANCE','UNTIL','CAPITULOS','VOLUMES','SERIES','UNICO', 'JOGOS',
+               'DISTOPIA', 'PONTOS', 'IONE', 'MARCADORES', 'PALAVRAS',
+               'PAGINAS', 'LETRAS', 'PARAGRAFOS', 'HORAS',
+               'MINUTOS'];
 
   // start a word find game
   var gamePuzzle = wordfindgame.create(words, '#puzzle', '#words');
