--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Caça Palavras</title>
+  <title>Gincana TAD</title>
    <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
   
